--- a/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/index.html
+++ b/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/index.html
@@ -8,15 +8,18 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/index.css'>
     <script src='./js/api.js'></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1>MARS RECOVERY PHOTOS</h1>
     </header>
-    <div id="container">
+    <main>
         <div class="rover-photo">
-            <img id="img"
+            <img class="img"
                 src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/fcam/FLB_486265257EDR_F0481570FHAZ00323M_.JPG"
                 alt="Mars Rover Photo">
             <div class="rover-details">
@@ -28,6 +31,8 @@
                 <p>Status: Active</p>
             </div>
         </div>
+    </main>
+    <footer></footer>
 </body>
 
 </html>
