--- a/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/index.html
+++ b/programacion-multimedia-y-dispositivos-moviles/Training SpaceApps/index.html
@@ -17,7 +17,7 @@
     <header>
         <h1>MARS RECOVERY PHOTOS</h1>
     </header>
-    <main>
+    <main id="container">
         <div class="rover-photo">
             <img class="img"
                 src="http://mars.jpl.nasa.gov/msl-raw-images/proj/msl/redops/ods/surface/sol/01000/opgs/edr/fcam/FLB_486265257EDR_F0481570FHAZ00323M_.JPG"
